# Elegy-MCP

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
contracts/: elegy-consumer-support.json
crates/elegy-adapter-fs/: Cargo.toml
crates/elegy-adapter-fs/src/: lib.rs
crates/elegy-adapter-http/: Cargo.toml
crates/elegy-adapter-http/src/: lib.rs
crates/elegy-cli/: Cargo.toml
crates/elegy-cli/src/: main.rs
crates/elegy-contracts/: Cargo.toml
crates/elegy-contracts/src/: lib.rs
crates/elegy-contracts/tests/: conformance.rs
crates/elegy-core/: Cargo.toml
crates/elegy-core/src/: lib.rs
crates/elegy-core/tests/: bootstrap_slice.rs
crates/elegy-descriptor/: Cargo.toml
crates/elegy-descriptor/src/: lib.rs
crates/elegy-host-mcp/: Cargo.toml
crates/elegy-host-mcp/src/: error.rs  host.rs  lib.rs
crates/elegy-policy/: Cargo.toml
crates/elegy-policy/src/: lib.rs
crates/elegy-runtime/: Cargo.toml
crates/elegy-runtime/src/: lib.rs
docs/: spec-baseline.md
docs/architecture/: README.md  adapter-extraction-design.md  adapter-extraction-design.status.sql  adapter-wave-validate.status.sql  host-boundary-design.md  http-runtime-slice-design.md  http-runtime-slice-design.status.sql
examples/: README.md
examples/fs-static-minimal/: elegy.toml  expected-resources.json
examples/fs-static-minimal/elegy.resources.d/: fs-static.toml
examples/fs-static-minimal/fixture-root/docs/: guide.txt
examples/http-minimal/: elegy.toml  expected-inspect-resources.json  expected-resources.json  expected-validate-config.json
examples/http-minimal/elegy.resources.d/: http.toml
examples/http-openapi-minimal/: elegy.toml  expected-resources.json  expected-validate-config.json  expected-validate-runtime.json
examples/http-openapi-minimal/elegy.resources.d/: http-openapi.toml
examples/http-openapi-minimal/openapi/: petstore.json
tests/fixtures/fs/duplicate-uri/: elegy.toml
tests/fixtures/fs/duplicate-uri/elegy.resources.d/: duplicate.toml
