[package]
name = "elegy-adapter-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-descriptor = { path = "../elegy-descriptor" }
elegy-policy = { path = "../elegy-policy" }

[lints]
workspace = true
