[package]
name = "elegy-adapter-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-descriptor = { path = "../elegy-descriptor" }
elegy-policy = { path = "../elegy-policy" }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
url.workspace = true

[lints]
workspace = true
