[package]
name = "elegy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "elegy"
path = "src/main.rs"

[dependencies]
clap.workspace = true
elegy-core = { path = "../elegy-core" }
elegy-host-mcp = { path = "../elegy-host-mcp" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
