[package]
name = "elegy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
elegy-descriptor = { path = "../elegy-descriptor" }
elegy-policy = { path = "../elegy-policy" }
elegy-runtime = { path = "../elegy-runtime" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
