[package]
name = "elegy-host-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
elegy-core = { path = "../elegy-core" }
rmcp.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rmcp = { workspace = true, features = ["client", "server", "transport-io"] }
tokio.workspace = true

[lints]
workspace = true
